<resources>
    <string name="app_name">Irrigation Software</string>
    <string name="minutes">Min</string>
    <string name="valve_name">Valve name</string>
    <string name="valve_number">Num</string>
    <string name="on_off">Off/On</string>
    <string name="enter_number_prompt">Please enter a number</string>
    <string name="positive_response">OK</string>
    <string name="negative_response">Cancel</string>
    <string name="time">Time</string>
    <string name="time_count_down">0</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high_percentage_warning">High percentage:</string>
    <string name="sync_bluetooth">Sync bluetooth</string>
    <string name="add_valve">Add valve</string>
    <string name="add_group">Add group</string>
    <string name="confirm_valve_option_delete">You are about to delete a valve No.:</string>
    <string name="confirm_valve_group_delete">You are about to delete a valve group named:</string>
    <string name="valve">Valve</string>
    <string name="no_bluetooth">Can\'t find bluetooth</string>
    <string name="enable_bluetooth">Please enable bluetooth, and try again</string>
    <string name="console_mode">Console</string>
    <string name="connect_bluetooth">Connect bluetooth</string>
    <string name="no_bluetooth_found">Can\'t find Bluetooth on this device.</string>
    <string name="show_temperature">Show temperature</string>
    <string name="send_command">Send Command</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_send">Send</string>
    <string name="disconnect">Disconnect</string>
    <string name="valves_on_arduino">Valves on the arduino</string>
    <string name="valves_to_send">Valves to send</string>
    <string name="valve_groups">Valve groups</string>
    <string name="show_errors">Show errors</string>
    <string name="cant_open_file">Can\'t open the file</string>
    <string name="cant_save">Can\'t save data</string>
    <string name="valves_in_this_group">Valves in this group:</string>
    <string name="show_valves">Show valves</string>
    <string name="valve_group_name">Valve group name</string>
    <string name="get_temperature_and_time_from_arduino">Get\'s temperature and time from arduino</string>
    <string name="n_a">N/A</string>
    <string name="temperature">Temperature</string>
    <string name="default_alert_message">Alert!</string>
    <string name="show_valves_error">Can\'t show valves (did you select a valve group?)</string>
    <string name="cant_add_valve_error">Can\'t add valve (did you select a valve group?)</string>
    <string name="press_one_time_to_exit">Press back one more time to exit</string>
    <string name="new_group">New group</string>
    <string name="resource_not_found">Resource not found</string>
</resources>
