<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/add_valve"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:id="@+id/addValveButton"/>
    <item
        android:title="@string/connect_bluetooth"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:id="@+id/connectBluetooth"/>
    <item
        android:title="@string/console_mode"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:id="@+id/consoleModeButton"/>
    <item
        android:title="show temperature float"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:id="@+id/showTemperatureFloat"/>
    <item
        android:title="show temperature"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:id="@+id/showTemperature"/>
</menu>